src/tests/typing/fail/dupe_var.tj
module main(b) = (b)
    shared b = ()
    automaton
        node n 
            b = 0
        transition